samples/_failures_safe/1761483799_e0f71c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37fe6eab.c: In function ‘main’:
./samples/SAFE/__tmp_37fe6eab.c:166:24: error: missing terminating ' character
  166 |         if (command == '
      |                        ^
./samples/SAFE/__tmp_37fe6eab.c:166:9: error: expected expression at end of input
  166 |         if (command == '
      |         ^~
./samples/SAFE/__tmp_37fe6eab.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37fe6eab.c:166:9: error: expected declaration or statement at end of input
